fixed burger button on ios.(button tag on fixed header did not work)

--- a/css/header.css
+++ b/css/header.css
@@ -96,7 +96,7 @@ nav {
   margin-left: 50%;
 }
 
-/* .burger:has(+ .popup_open) div {
+.burger:has(+ .popup_open) div {
   background-color: var(--popupTextColor);
 }
 
@@ -112,7 +112,7 @@ nav {
 .burger:has(+ .popup_open) .burger_line_3 {
   transform-origin: left;
   transform: rotate(-90deg) translateX(-4px);
-} */
+}
 
 @media(max-width:980px) {
 
